# GenParamQC

./: README.md  requirements.txt
bench_utils/: bench.ipynb  plot_random.ipynb  pyproject.toml  rxx_test.ipynb  utils.py
genqc_param/: fast_optim.py  genQC-param-train.ipynb  inference_fast_optim.ipynb  pyproject.toml
genqc_param/genQC/dataset/: config_dataset.py  mixed_cached_qc_dataset.py  qc_dataset.py
genqc_param/genQC/inference/: infer_compilation.py  optim.py
genqc_param/genQC/models/: config_model.py  unet_qc.py
genqc_param/genQC/pipeline/: diffusion_pipeline.py  diffusion_pipeline_special.py
genqc_param/genQC/platform/: qcircuit_dataset_construction.py  qcircuit_metrics.py
genqc_param/saves/qc_params-fixed/: config.yaml  fit_valid_losses.txt
genqc_param/saves/qc_params-new/: config.yaml  fit_losses.txt  fit_valid_losses copy.txt
genqc_param/saves/qc_unet_config_Compilation_3_qubit/: config.yaml
genqc_param/src/: RELEASES.md  _quarto.yml  config_loader.ipynb  index.ipynb  metrics.ipynb  nbdev.yml  printing.ipynb  util.ipynb
genqc_param/src/dataset/: cached_qc_dataset.ipynb  config_dataset.ipynb  dataset_helper.ipynb  mixed_cached_qc_dataset.ipynb  qc_dataset.ipynb
genqc_param/src/inference/: export_cudaq.ipynb  infer_compilation.ipynb  infer_gate_hist.ipynb  infer_misc.ipynb  infer_srv.ipynb
genqc_param/src/models/: config_model.ipynb  frozen_open_clip.ipynb  layers.ipynb  transformers.ipynb  unet_qc.ipynb  unitary_encoder.ipynb
genqc_param/src/pipeline/: diffusion_pipeline.ipynb  diffusion_pipeline_special.ipynb  pipeline.ipynb
(+8 files in other folders)
