[project]
name = "bench-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pip>=25.0.1",
    "pylatexenc>=2.10",
    "qiskit>=1.4.2",
    "qiskit-aer>=0.17.0",
    "tqdm>=4.67.1",
]
